Make abort on 5XX

--- a/Caddyfile
+++ b/Caddyfile
@@ -11,10 +11,11 @@
 # Then start your project at the server at repl on port 8080
 #
 localhost:3030 {
+
+  handle_errors 5xx {
+     abort
+  }
   reverse_proxy localhost:8080 {
-    # If localhost:8080 is not responding retry every second for
-    # 30 seconds. This stops deployments from breaking SSE connections.
-    lb_try_duration 30s
-    lb_try_interval 1s
+
   }
 }
